--- a/sd-s4apps01/salesacceptdn/webapp/view/Main.view.xml
+++ b/sd-s4apps01/salesacceptdn/webapp/view/Main.view.xml
@@ -22,7 +22,7 @@
         >
             <upload:UploadSet
                 id="idUploadSet"
-                items="{Attach>DocumentInfoRecordToAttachmentNavigation}"
+                items="{ path : 'Template>/Configuration', filters : { path : 'Object', operator : 'EQ', value1 : 'ZUPLOAD_SALESACCEPTDN' } }"
                 multiple="false"
                 mode="None"
                 uploadEnabled="false"
@@ -32,12 +32,9 @@
                 <upload:items>
                     <upload:UploadSetItem
                         id="idUploadSetItem"
-                        fileName="{Attach>FileName}"
-                        mediaType="{Attach>MimeType}"
-                        url="{
-                    path: 'Attach>__metadata/media_src',
-                    formatter: '.getMediaUrl'
-                }"
+                        fileName="{Template>TemplateName}"
+                        mediaType="{Template>TemplateMimeType}"
+                        url="{Template>TemplateContent}"
                         visibleEdit="false"
                         visibleRemove="false"
                     />
