20241122 PP-024 生産計画立案プラットフォーム

--- a/pp-s4apps01/productionplan/webapp/view/Main.view.xml
+++ b/pp-s4apps01/productionplan/webapp/view/Main.view.xml
@@ -1319,7 +1319,7 @@
                       </VBox>
                     </t:template>
                 </t:Column>
-                <t:Column id="Message" label="{i18n>Message}" width="10rem" sortProperty="Message" filterProperty="Message" visible="true" autoResizable="true">
+                <t:Column id="Message" label="{i18n>Message}" width="10rem" sortProperty="Message" filterProperty="Message" visible="false" autoResizable="true">
                     <t:customData>
                         <core:CustomData key="p13nData" value='\{"columnKey":"Message", "leadingProperty":"Message", "sortProperty":"Message", "filterProperty": "Message"}'/>
                     </t:customData>
